# kcm-plasma-services

./: CMakeLists.txt  Messages.sh  README.md  kcm_plasmaservices.desktop
debian/: changelog  control  copyright  rules
src/: CMakeLists.txt  abstractservice.h  akonadiservice.cpp  akonadiservice.h  balooservice.cpp  balooservice.h  krunnerservice.cpp  krunnerservice.h  kwalletservice.cpp  kwalletservice.h  plasmaserviceskcm.cpp  plasmaserviceskcm.h  test.cpp
